@@ -28,6 +28,20 @@ namespace gui
 		//! returns if box is checked
 		virtual bool isChecked() const;
 
+		//! Sets whether to draw the background
+		virtual void setDrawBackground(bool draw);
+
+		//! Checks if background drawing is enabled
+		/** \return true if background drawing is enabled, false otherwise */
+		virtual bool isDrawBackgroundEnabled() const;
+
+		//! Sets whether to draw the border
+		virtual void setDrawBorder(bool draw);
+
+		//! Checks if border drawing is enabled
+		/** \return true if border drawing is enabled, false otherwise */
+		virtual bool isDrawBorderEnabled() const;
+
 		//! called if an event happened.
 		virtual bool OnEvent(const SEvent& event);
 
@@ -42,9 +56,11 @@ namespace gui
 
 	private:
 
-		u32 checkTime;
+		u32 CheckTime;
 		bool Pressed;
 		bool Checked;
+		bool Border;
+		bool Background;
 	};
 
 } // end namespace gui
